--- a/Programming_in_JS/8°/P8.html
+++ b/Programming_in_JS/8°/P8.html
@@ -6,24 +6,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+        }
+
+        input[type="number"] {
+            margin: 10px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            margin: 10px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        #resultados {
+            margin-top: 20px;
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 5px;
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 
 <body>
+    <h1>Cálculo de soma e média</h1>
+    <form>
+        <label for="num1">Número 1:</label>
+        <input type="number" id="num1" name="num1" required><br>
+        <label for="num2">Número 2:</label>
+        <input type="number" id="num2" name="num2" required><br>
+        <label for="num3">Número 3:</label>
+        <input type="number" id="num3" name="num3" required><br>
+        <label for="num4">Número 4:</label>
+        <input type="number" id="num4" name="num4" required><br>
+        <label for="num5">Número 5:</label>
+        <input type="number" id="num5" name="num5" required><br>
+        <button type="button" onclick="calcularNumeros()">Calcular</button>
+    </form>
+    <div id="resultados"></div>
     <script>
-        let soma = 0;
-        let media = 0;
+        function calcularNumeros() {
+            let soma = 0;
+            let media = 0;
+            let num1 = parseFloat(document.getElementById("num1").value);
+            let num2 = parseFloat(document.getElementById("num2").value);
+            let num3 = parseFloat(document.getElementById("num3").value);
+            let num4 = parseFloat(document.getElementById("num4").value);
+            let num5 = parseFloat(document.getElementById("num5").value);
 
-        for (let i = 0; i < 5; i++) {
-            let numero = parseFloat(prompt("Digite o " + (i + 1) + "º número:"));
+            soma = num1 + num2 + num3 + num4 + num5;
+            media = soma / 5;
 
-            soma = soma+numero;
+            document.getElementById("resultados").innerHTML = "A soma dos números é: " + soma + "<br>A média dos números é: " + media;
         }
-
-        media = soma / 5;
-
-        console.log("A soma dos números é: " + soma);
-        console.log("A média dos números é: " + media);
-
     </script>
 </body>
 
