--- a/Programming_in_JS/6°/P6.html
+++ b/Programming_in_JS/6°/P6.html
@@ -6,26 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa 6</title>
+<style>
+    #abaixo {
+      width: 50%;
+      float: left;
+    }
+
+    #aolado {
+      width: 50%;
+      float: right;
+      font-family: monospace;
+      white-space: pre;
+    }
+  </style>
+
 </head>
 
 <body>
-    <div id="abaixo"></div>
-    <div id="aolado"></div>
-   
-    <script>
-        let numabaixo = "";
-        for (let i = 1; i <= 20; i++) {
-          numabaixo += i + "<br>";
-        }
-        document.getElementById("abaixo").innerHTML = numabaixo;
-        
-        
-        let numaolado = "";
-        for (let i = 1; i <= 20; i++) {
-          numaolado += i + " ";
-        }
-        document.getElementById("aolado").innerHTML = numaolado;
-        </script>
+  <div id="abaixo"></div>
+  <div id="aolado"></div>
+
+  <script>
+    let numabaixo = "";
+    for (let i = 1; i <= 20; i++) {
+      numabaixo += i + "<br>";
+    }
+    document.getElementById("abaixo").innerHTML = numabaixo;
+
+
+    let numaolado = "";
+    for (let i = 1; i <= 20; i++) {
+      numaolado += i + " ";
+    }
+    document.getElementById("aolado").innerHTML = numaolado;
+  </script>
 </body>
 
 </html>
