--- a/Programming_in_JS/4°/P4.html
+++ b/Programming_in_JS/4°/P4.html
@@ -6,24 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa 4</title>
+<style type="text/css">
+        	body {
+			font-family: Arial, sans-serif;
+			text-align: center;
+		}
+		h1 {
+			margin-top: 50px;
+		}
+    </style>
+
 </head>
 
 <body>
+    <h1>População dos países A e B</h1>
+	<p id="resultado"></p>
+
     <script>
         let populacaoA = 80000;
         let taxaCrescimentoA = 0.03;
         let populacaoB = 200000;
         let taxaCrescimentoB = 0.015;
         let anos = 0;
-
+    
         while (populacaoA < populacaoB) {
             populacaoA += populacaoA * taxaCrescimentoA;
             populacaoB += populacaoB * taxaCrescimentoB;
             anos++;
         }
-
-        alert("Serão necessários " + anos + " anos para que a população do país A ultrapasse ou iguale a população do país B.");
-
+    
+        let resultado = document.getElementById("resultado");
+        resultado.textContent = "Serão necessários " + anos + " anos para que a população do país A ultrapasse ou iguale a população do país B.";
     </script>
 </body>
 
